# auth-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  authoritative_apps.json  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.yml  logger_config.yml  main.py  mypy.ini  new_dep.py  pyproject.toml  pytest.ini  refresh_tokens_example.py  requirements.txt  ruff.toml  test.py
.github/workflows/: publish-client-image.yaml  publish-image.yaml
alembic/: env.py
alembic/versions/: 2024_02_29_e61c9ca5000e_.py  2024_03_03_71f802573ec2_.py  2024_03_04_72932222e509_.py  2024_03_07_10fcc3074403_.py  2024_03_09_ab869705511b_.py  2024_03_16_921ec37abd97_.py
api_example/: config.py  db_helper.py  main.py  models.py
api_example/alembic/: env.py
api_example/auth/: __init__.py  crud.py  schemas.py  security.py  utils.py  views.py
client/: Dockerfile  package-lock.json  package.json
client/src/: App.tsx  entities.ts  main.tsx
config/: apps.json
docker/: app-compose.yml  dev-compose.yml  docker-compose.app.yml  docker-compose.mongo.yml  docker-compose.production.yml  docker-compose.proxy-tls.yml  docker-compose.proxy.yml  docker-compose.yml  mongo-compose.yml  redis-compose.yml
examples/: refresh_tokens_example.py
src/: base_mongo_repository.py  config.py  container.py  database.py  db_helper.py  dependencies.py  exceptions.py  hash.py  jwe_tokens.py  jwt_token.py  lifespan.py  main.py  models.py  mongo_helper.py  redis_helper.py  schemas.py  templates.py  utils.py
src/apps/: dependencies.py  dto.py  models.py  (+8 more)
templates/: confirm_email.html  otp.html  reset_password.html
tests/: TestsDockerfile  conftest.py  dont_working_test_apps.py  fake_redis.py  oauth2_sessions_repo.py  sessions_repo.py  test-compose.yml  test_apps.py  test_auth.py  test_auth_email.py  test_email.py  test_emails.py  test_oidc.py  users_repo.py
(+136 files in other folders)
