[tool.poetry]
name = "auth-server"
version = "0.1.0"
description = ""
authors = ["theandrunique <theandrunique@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
pydantic-settings = "^2.2.1"
motor = "^3.4.0"
pyyaml = "^6.0.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
sqlalchemy = "^2.0.29"
pydantic = {extras = ["email"], version = "^2.7.0"}
aiosqlite = "^0.20.0"
bcrypt = "^4.1.2"
redis = "^5.0.3"
jinja2 = "^3.1.3"
orjson = "^3.10.3"
fastapi-mail = {extras = ["httpx"], version = "^1.4.1"}
jwcrypto = "^1.5.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.1"
pyright = "^1.1.362"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
]

pythonVersion = "3.12"
pythonPlatform = "Linux"